--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DenysVuika/handicraft.git"
+    "url": "git+https://github.com/webstencils/sdk.git"
   },
   "packageManager": "yarn@4.1.1",
   "dependencies": {
