--- a/packages/layers/package.json
+++ b/packages/layers/package.json
@@ -23,12 +23,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/webstencils/core/"
+    "url": "https://github.com/webstencils/sdk/"
   },
   "bugs": {
-    "url": "https://github.com/webstencils/core/issues"
+    "url": "https://github.com/webstencils/sdk/issues"
   },
-  "homepage": "https://github.com/webstencils/core/",
+  "homepage": "https://github.com/webstencils/sdk/",
   "scripts": {
     "yalc": "yalc push"
   },
