--- a/packages/layers/package.json
+++ b/packages/layers/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/webstencils/sdk/"
+    "url": "git+https://github.com/webstencils/sdk.git"
   },
   "bugs": {
     "url": "https://github.com/webstencils/sdk/issues"
