update yalc targets

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -6,6 +6,7 @@
   "tags": [],
   "targets": {
     "yalc": {
+      "dependsOn": ["build"],
       "executor": "nx:run-script",
       "options": {
         "script": "yalc"
