chore: enable conventional commits for the releases

--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,10 @@
   },
   "defaultProject": "example-designer",
   "release": {
-    "projects": ["packages/*"]
+    "projects": ["packages/*"],
+    "version": {
+      "conventionalCommits": true
+    }
   },
   "plugins": [
     {
