feat(ui): introduce ui package

--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/prompt-cli": "^19.2.0",
+    "@emotion/babel-plugin": "11.11.0",
     "@nx/eslint": "18.1.2",
     "@nx/eslint-plugin": "18.0.8",
-    "@nx/js": "18.0.8",
+    "@nx/js": "18.1.2",
     "@nx/react": "18.1.2",
     "@nx/vite": "18.0.8",
     "@nx/web": "18.0.8",
