--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.66",
+    "@types/shallowequal": "^1.1.5",
     "react": "18.2.0"
   },
   "peerDependencies": {
