--- a/packages/ui/project.json
+++ b/packages/ui/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "core",
+  "name": "ui",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/core/src",
+  "sourceRoot": "packages/ui/src",
   "projectType": "library",
   "tags": [],
   "targets": {
