--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,5 +49,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.69",
+    "@types/react-color": "^3.0.12"
   }
 }
