--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -41,9 +41,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.0.2",
-    "react-color": "^2.19.3"
+    "classnames": "^2.5.1"
   },
   "peerDependencies": {
     "@webstencils/core": ">=0.1.0",
